fix css for revision textarea

--- a/ps03/war/Collaborator.css
+++ b/ps03/war/Collaborator.css
@@ -180,6 +180,8 @@ html {
     border: 0;
     font-family: monospace;
     resize: none;
+    width: 540px;
+    height: 450px;
 }
 .revisions .gwt-TextArea:focus {
     outline: 0;
