--- a/ps05/CollaboratorAndroid/res/layout/doc.xml
+++ b/ps05/CollaboratorAndroid/res/layout/doc.xml
@@ -1,7 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="fill_parent"
+android:layout_height="fill_parent"
+android:orientation="vertical">
+    <EditText xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:gravity="top"
+        android:inputType="textMultiLine" />
     <EditText xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/contents"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="top"
         android:inputType="textMultiLine" />
+</LinearLayout>
